tests/snapshots/run_wpt_conformance__litert_reduceSumSquare_float32_3D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_sum_square.https.any.js",
    "reduceSumSquare float32 3D tensor default options",
    "litert",
    "PASS",
)
