tests/snapshots/run_wpt_conformance__litert_reduceSumSquare_float32_3D_tensor_options_keepDimensions_false.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_sum_square.https.any.js",
    "reduceSumSquare float32 3D tensor options.keepDimensions=false",
    "litert",
    "PASS",
)
